// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatCard > Snapshot Tests > matches snapshot for compact layout 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/50 to-slate-900/50 p-5 backdrop-blur transition-all hover:border-slate-600/80 hover:shadow-lg"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="rounded-lg p-3 bg-slate-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-dollar-sign h-6 w-6 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
        </div>
        <div>
          <p
            class="text-sm text-slate-400 mb-1"
          >
            订单数
          </p>
          <p
            class="font-bold text-2xl text-white"
          >
            150
          </p>
        </div>
      </div>
      <div
        class="flex items-center gap-1 text-xs"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-down-right w-3 h-3 text-red-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m7 7 10 10"
          />
          <path
            d="M17 7v10H7"
          />
        </svg>
        <span
          class="text-red-400"
        >
          -5%
        </span>
        <span
          class="text-slate-500"
        >
          vs 上月
        </span>
      </div>
    </div>
    <div
      class="absolute right-0 bottom-0 h-20 w-20 rounded-full bg-gradient-to-br from-purple-500/10 to-transparent blur-2xl opacity-30"
    />
  </div>
</div>
`;

exports[`StatCard > Snapshot Tests > matches snapshot for default layout 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/50 to-slate-900/50 p-5 backdrop-blur transition-all hover:border-slate-600/80 hover:shadow-lg"
  >
    <div
      class="flex items-start justify-between"
    >
      <div
        class="flex-1"
      >
        <p
          class="text-sm text-slate-400 mb-2"
        >
          销售额
        </p>
        <p
          class="font-bold mb-1 text-2xl text-white"
        >
          ¥100,000
        </p>
        <p
          class="text-xs text-slate-500"
        >
          本月
        </p>
        <div
          class="flex items-center gap-1 mt-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-arrow-up-right w-3 h-3 text-emerald-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          <span
            class="text-xs text-emerald-400"
          >
            +12%
          </span>
          <span
            class="text-xs text-slate-500 ml-1"
          >
            vs 上月
          </span>
        </div>
      </div>
    </div>
    <div
      class="absolute right-0 bottom-0 h-20 w-20 rounded-full bg-gradient-to-br from-purple-500/10 to-transparent blur-2xl opacity-30"
    />
  </div>
</div>
`;

exports[`StatCard > Snapshot Tests > matches snapshot for row layout 1`] = `
<div>
  <div
    class="relative overflow-hidden rounded-lg border border-slate-700/50 bg-gradient-to-br from-slate-800/50 to-slate-900/50 p-5 backdrop-blur transition-all hover:border-slate-600/80 hover:shadow-lg"
  >
    <div
      class="flex items-center justify-between"
    >
      <p
        class="text-sm text-slate-400"
      >
        客户数
      </p>
      <div
        class="flex items-center gap-2"
      >
        <p
          class="font-bold text-2xl text-white"
        >
          250
        </p>
        <div
          class="rounded-lg p-2 bg-slate-800"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-dollar-sign h-5 w-5 text-white"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="12"
              x2="12"
              y1="2"
              y2="22"
            />
            <path
              d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="text-xs text-slate-500 mt-2"
    >
      活跃客户
    </p>
    <div
      class="absolute right-0 bottom-0 h-20 w-20 rounded-full bg-gradient-to-br from-purple-500/10 to-transparent blur-2xl opacity-30"
    />
  </div>
</div>
`;
